--- a/Week_6/Portfolio_Page/css/style.css
+++ b/Week_6/Portfolio_Page/css/style.css
@@ -3,34 +3,158 @@ Responsive 996px grid system ~ Style CSS.
 Copyright 2013, Josh Cope
 */
 
+
 /* =============================================================================
    Site Styles
    ========================================================================== */
+
 
 /* =============================================================================
    Page Styles
    ========================================================================== */
 
+
 /* =============================================================================
    Media Queries
    ========================================================================== */
 
+
+/* =============================================================================
+ Media Queries
+ ========================================================================== */
+
+
+/* Default large browser screen size just for demo purposes */
+
+.container {
+    background-color: rgba(0, 0, 255, 0.3);
+}
+
+
 /* Tablet Portrait size to Base 996px */
-@media only screen and (min-width: 768px) and (max-width: 995px) {}
+
+@media only screen and (min-width: 768px) and (max-width: 995px) {
+    .container {
+        background: #F00;
+    }
+}
+
 
 /* All Mobile Sizes */
-@media only screen and (max-width: 767px) {}
+
+@media only screen and (max-width: 767px) {
+    .container {
+        background: #6afd7f;
+    }
+}
+
 
 /* Mobile Landscape Size to Tablet Portrait */
-@media only screen and (min-width: 480px) and (max-width: 767px) {}
+
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+    .container {
+        background: #e16bfe;
+    }
+}
+
 
 /* Mobile Portrait Size to Mobile Landscape Size */
-@media only screen and (max-width: 479px) {}
+
+@media only screen and (max-width: 479px) {
+    .container {
+        background: #00f;
+    }
+}
+
+Now open the index file in a browser and resize it. Watch how the color changes based on width and height thresholds in our media queries! 996 grid is pretty simple to implement. So I will go ahead and start live coding and post it here after we complete a few grid examples. CSS:
+/*
+Responsive 996px grid system ~ Style CSS.
+Copyright 2013, Josh Cope
+*/
+
+
+/* =============================================================================
+ Site Styles
+ ========================================================================== */
+
+
+/*this is the default background color for our container - light blue*/
+
+.container {
+    background-color: rgba(0, 0, 255, 0.5);
+}
+
+div {
+    background-color: rgba(0, 0, 255, 0.5);
+}
+
+.spacer {
+    margin-bottom: 26px;
+}
+
+
+/* =============================================================================
+ Page Styles
+ ========================================================================== */
+
+
+/* Advanced grid specific styles */
+
+.big_div {
+    height: 412px;
+}
+
+.little_div {
+    height: 120px;
+}
+
+
+/* =============================================================================
+ Media Queries
+ ========================================================================== */
+
+
+/* Tablet Portrait size to Base 996px */
+
+@media only screen and (min-width: 768px) and (max-width: 995px) {
+    body{
+        background-color: rgba(255, 0, 0, 0.5);
+    }
+}
+
+
+/* All Mobile Sizes */
+
+@media only screen and (max-width: 767px) {
+    body {
+        background-color: rgba(0, 255, 255, 0.5);
+    }
+}
+
+
+/* Mobile Landscape Size to Tablet Portrait */
+
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+    body{
+        background-color: rgba(255, 100, 0, 0.5);
+    }
+}
+
+
+/* Mobile Portrait Size to Mobile Landscape Size */
+
+@media only screen and (max-width: 479px) {
+    body {
+        background-color: rgba(255, 255, 0, 0.5);
+    }
+}
 
 
 /* =============================================================================
    Font-Face
    ========================================================================== */
+
+
 /* This is the proper syntax for an @font-face file
 
 /* @font-face {
