--- a/Week_6/Portfolio_Page/css/style.css
+++ b/Week_6/Portfolio_Page/css/style.css
@@ -1,70 +1,193 @@
-/*
-Responsive 996px grid system ~ Style CSS.
-Copyright 2013, Josh Cope
-*/
-
+Responsive 996px grid system ~ Style CSS. Copyright 2013,
+Josh Cope */
 /* =============================================================================
    Site Styles
    ========================================================================== */
 
-.view{
-	cursor: default;
-	overflow: hidden;
-	text-align: center;
-	position: relative;
-	margin-bottom: 30px;
-	box-shadow: 0 0 5px #ddd;
+.view {
+    /*z-index:9;*/
+    cursor: default;
+    overflow: hidden;
+    text-align: center;
+    position: relative;
+    margin-bottom: 30px;
+    box-shadow: 0 0 3px #ddd;
 }
 
-.view .mask{
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	overflow: hidden;
-	top: 0;
-	left: 0;
+.view .mask,
+.view .content {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
 }
 
-.view img{
-	display: block;
-	position: relative;
-}
-.view h2{
-	text-transform: uppercase;
-	color: #FFF;
-	text-align: center;
-	position: relative;
-	font-size: 22px;
-	padding: 10px;
-	background: rgba(0,0,0,0.5);
-	margin: 20px 0 0 0;
-	text-shadow: none;
+.view img {
+    display: block;
+    position: relative;
 }
 
-.view p{
-	font-family: Georgia, serif;
-	font-style: italic;
-	font-size: 10px;
-	position: relative;
-	color: #FFF;
-	padding: 10px 20px 5px 20px;
-	text-align: center;
+.view h2 {
+    text-transform: uppercase;
+    color: #fff;
+    text-align: center;
+    position: relative;
+    font-size: 22px;
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.8);
+    margin: 20px 0 0 0;
+    text-shadow: none;
 }
 
-.view a.info{
-	color: #FFF;
-	background: #000;
-	padding: 5px 12px;
-	text-decoration: none;
-	margin-top: 10px;
-	display: inline-block;
-	overflow: hidden;
-	text-transform: uppercase;
-
+.view p {
+    font-family: Georgia, serif;
+    font-style: italic;
+    font-size: 10px;
+    position: relative;
+    color: #fff;
+    padding: 10px 20px 5px;
+    text-align: center;
 }
 
-.view a.info:hover{
-	background: #72C02C;
+.view a.info {
+    color: #fff;
+    background: #000;
+    padding: 5px 12px;
+    text-decoration: none;
+    margin-top: 10px;
+    display: inline-block;
+    overflow: hidden;
+    text-transform: uppercase;
+}
+
+.view a.info:hover {
+    background: #72c02c;
+}
+
+
+/*CSS3 Hover Effect*/
+
+
+/* set up transitions for hover */
+
+.view-portfolio img {
+    /*         left: 10px;
+        margin-left: -10px; */
+    position: relative;
+    -webkit-transition: all 0.6s ease-in-out;
+    -moz-transition: all 0.6s ease-in-out;
+    -o-transition: all 0.6s ease-in-out;
+    -ms-transition: all 0.6s ease-in-out;
+    transition: all 0.6s ease-in-out;
+}
+
+
+/* Transitions for mask div with text, default hide our text and links */
+
+.view-portfolio .mask {
+    -webkit-transition: all 0.5s linear;
+    -moz-transition: all 0.5s linear;
+    -o-transition: all 0.5s linear;
+    -ms-transition: all 0.5s linear;
+    transition: all 0.5s linear;
+    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    opacity: 0;
+}
+
+.view-portfolio h2 {
+    color: #333;
+    margin: 10px 40px 0;
+    background: transparent;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -o-transform: scale(0);
+    -ms-transform: scale(0);
+    transform: scale(0);
+    -webkit-transition: all 0.5s linear;
+    -moz-transition: all 0.5s linear;
+    -o-transition: all 0.5s linear;
+    -ms-transition: all 0.5s linear;
+    transition: all 0.5s linear;
+    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    opacity: 0;
+}
+
+.view-portfolio p {
+    color: #333;
+    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    opacity: 0;
+    font-size: 10px;
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -o-transform: scale(0);
+    -ms-transform: scale(0);
+    transform: scale(0);
+    -webkit-transition: all 0.5s linear;
+    -moz-transition: all 0.5s linear;
+    -o-transition: all 0.5s linear;
+    -ms-transition: all 0.5s linear;
+    transition: all 0.5s linear;
+}
+
+.view-portfolio a.info {
+    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    opacity: 0;
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -o-transform: scale(0);
+    -ms-transform: scale(0);
+    transform: scale(0);
+    -webkit-transition: all 0.5s linear;
+    -moz-transition: all 0.5s linear;
+    -o-transition: all 0.5s linear;
+    -ms-transition: all 0.5s linear;
+    transition: all 0.5s linear;
+}
+
+
+/* zoom and rotate image on hover */
+
+.view-portfolio:hover img {
+    -webkit-transform: scale(2) rotate(10deg);
+    -moz-transform: scale(2) rotate(10deg);
+    -o-transform: scale(2) rotate(10deg);
+    -ms-transform: scale(2) rotate(10deg);
+    transform: scale(2) rotate(10deg);
+    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=30)";
+    filter: alpha(opacity=30);
+    opacity: 0.3;
+}
+
+
+/* show mask div on hover */
+
+.view-portfolio:hover .mask {
+    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=100);
+    opacity: 1;
+}
+
+
+/* show mask div content scale from 0 to 1, and opacity from 0 to 1 */
+
+.view-portfolio:hover h2,
+.view-portfolio:hover p,
+.view-portfolio:hover a.info {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -o-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=100);
+    opacity: 1;
 }
 
 
@@ -72,45 +195,53 @@ Copyright 2013, Josh Cope
    Page Styles
    ========================================================================== */
 
+
 /* =============================================================================
    Media Queries
    ========================================================================== */
 
+
 /* Tablet Portrait size to Base 996px */
+
 @media only screen and (min-width: 768px) and (max-width: 995px) {
-	body{
-		background-color: red;
-	}
+    body {
+        background-color: red;
+    }
 }
+
 
 /* All Mobile Sizes */
-@media only screen and (max-width: 767px) {
-	body{
-		background-color: green;
-	}
 
+@media only screen and (max-width: 767px) {
+    body {
+        background-color: green;
+    }
 }
+
 
 /* Mobile Landscape Size to Tablet Portrait */
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-	body{
-		background-color: yellow;
-	}
 
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+    body {
+        background-color: yellow;
+    }
 }
 
-/* Mobile Portrait Size to Mobile Landscape Size */
-@media only screen and (max-width: 479px) {
-	body{
-		background-color: purple;
-	}
 
+/* Mobile Portrait Size to Mobile Landscape Size */
+
+@media only screen and (max-width: 479px) {
+    body {
+        background-color: purple;
+    }
 }
 
 
 /* =============================================================================
    Font-Face
    ========================================================================== */
+
+
 /* This is the proper syntax for an @font-face file
 
 /* @font-face {
@@ -122,4 +253,3 @@ url('../fonts/FontName.ttf') format('truetype'),
 url('../fonts/FontName.svg#FontName') format('svg');
 font-weight: normal;
 font-style: normal; }
-*/
